--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -12,7 +12,7 @@
         <div class='forBigPussy col-1'></div>
         <button  class="grey-btn col-lg-3 col-sm-12"  style="display: flex; align-items: center; justify-content: space-around" (click)="logout()">
           <mat-icon mat-list-icon>exit_to_app</mat-icon>
-          Deconnexion
+          Déconnexion
           </button>
       </div>
 
@@ -27,8 +27,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let command of neonList; let i = index" (click)="goToNeonDetail(command)">
-              <!--              [className]="command.typo + ' dynamicNeonTitle ' + getColor(command.colors) "-->
+            <tr *ngFor="let command of neonList; let i = index" (click)="goToNeonDetail(command)" [ngClass]="i === neonList.length - 1 ? 'no-border-bot' : ''"  >
               <td class="pb3 pt3" data-column="Texte">{{command.text | titlecase}}</td>
               <td data-column="">{{command.state | titlecase}}</td>
             </tr>
@@ -51,7 +50,7 @@
     <div class="col-md-8 col-sm-6 col-xs-12 neon-canvas-cont">
       <div *ngIf="neonSelected.state !== 'created'" [style.backgroundImage]="'url('+ neonSelected.filePath +')'"  
         class="neon-canvas"></div>
-      <div *ngIf="neonSelected.state === 'created'" class="neon-canvas"  [style.background-color]="neonSelected.state === 'created' ? '#000b31' : 'white'">
+      <div *ngIf="neonSelected.state === 'created'" class="neon-canvas"   [style.background-color]="neonSelected.state === 'created' ? '#000b31' : 'white'">
             
 <svg width="100" height="100" viewBox="0 0 300 300">
   <defs>
@@ -103,8 +102,8 @@
         <div class="bar-btn-cont">
           <!-- <button (click)="dlFile(neonSelected.filePath)">link</button> -->
 
-          <button *ngIf="neonSelected?.state === 'created'" click class="prev-btn"><a href="#open-modal">Demander une modification</a></button>
-          <button *ngIf="neonSelected?.state !== 'created'" click class="prev-btn"><a target="_blank"
+          <button *ngIf="neonSelected?.state === 'created'"  class="prev-btn"><a href="#open-modal">Demander une modification</a></button>
+          <button *ngIf="neonSelected?.state !== 'created'" (click)="downloadDT()" class="prev-btn"><a target="_blank"
               class='customHyperlink' [href]="neonSelected?.filePath">Télécharger mon dessin</a></button>
           <!-- <button   class="prev-btn" >Demander une notification</button> -->
 
@@ -389,7 +388,7 @@
           <div id="card-errors" role="alert" *ngIf="error">{{ error }}</div>
           <!-- </div> -->
 
-          <button class='next-btn-no-margin mt5 big-btn mukta' type="submit">Valider et payer</button>
+          <button (click)="onClickValiderEtPayer()" class='next-btn-no-margin mt5 big-btn mukta' type="submit">Valider et payer</button>
         </form>
 
 
@@ -578,7 +577,7 @@
           <div class="card_content">
             <div [style.backgroundImage]="'url('+ '../.././assets/Icon-livre-sous-quinze-jours-10.png' +')'" class="card-logo"></div>
 
-            <span style="font-size: 17px;" class="ec-card-title">
+            <span style="font-size: 1.5em;" class="ec-card-title">
               Livré sous 15 jours
             </span>
             <span class="ec-card-descr">
@@ -655,7 +654,7 @@
       <div class="card_content">
         <div [style.backgroundImage]="'url('+ '../.././assets/Cinq-etoile-15.png' +')'" class="card-logo-note"></div>
 
-        <span style="font-size: 17px;" class="ec-card-title">
+        <span style="font-size: 1.5em;" class="ec-card-title">
           Delphine M.
         </span>
         <span class="ec-card-descr">
