--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -1,5 +1,6 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
+
 .ec-bigbox {
   // height: 800px;
   padding: 1.5rem;
@@ -53,14 +54,30 @@
 }
 
 .pd7 {
-  padding-right: 7%;
-}
+  padding-right: 5.45%;}
 
 .ec-petit-prince {
   height: 90%;
 }
 .checkboxCont  {
   display: flex;
+}
+.ec-list-cont tbody {
+  display: block;
+  overflow-y: scroll;
+  max-height: 450px;
+}
+
+.ec-list-cont   thead, tbody tr {
+  display:table;
+  width:100%;
+  table-layout:fixed;/* even columns width , fix width of table too*/
+}
+thead {
+  width: calc( 100% - 1em )/* scrollbar is average 1em/16px width, remove it from thead width */
+}
+table {
+  width:400px;
 }
 
 .ec-list-cont {
@@ -69,9 +86,7 @@
   background-color: white;
   justify-content: flex-start;
   border-radius: 7px;
-  overflow-y: scroll;
-  max-height: 450px;
-  height: 80%;
+  min-height: 400px;
   // padding-left: 2.5%;
   // padding-right: 2.5%;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
@@ -255,20 +270,22 @@ border-collapse: collapse;
 }
 
 
+
 tr {
   color: #000b31; 
   border-bottom: 1px solid #D5D5D5;
 }
 
+
+.ec-list-cont 
 tbody tr:hover {  
-  // background-color: rgba(0,11,49, 0.8);
-  // color: white !important;
   color: #F4CC20;
-      // transform: scale(1.05);
 }
 
+
 td, th { 
-padding: 10px; 
+padding-top: 2%;
+padding-bottom: 2%; 
   text-align: left;
   cursor: pointer;
   font-family: Mukta-Regular, sans-serif;
@@ -618,7 +635,9 @@ form.checkout {
 
 
 
-
+.muktaBold {
+  font-family: Mukta-Bold, sans-serif;
+}
 .container {
   display: grid;
   justify-content: center;
@@ -636,7 +655,7 @@ form.checkout {
     height: 100%;
   min-height: 350px;
     width: 100%;
-      // background-color: #000b31;
+      background-color: #000b31;
 
     // background-image: url('../../assets/outer-space-neon.jpg');
     background-repeat:no-repeat;
@@ -742,24 +761,27 @@ margin-bottom: 15px;
 
 }
 
+.neon-tarif-bigbox {
+  padding-left: 0 !important; 
+  padding: 2em;
+  padding-top: 0 !important;
+}
+
 .neon-tarif-cont {
   border-bottom: 1px solid #D5D5D5;
+  border-top: 1px solid #D5D5D5;
+  border-right: 1px solid #D5D5D5;
+
   border-radius: 15px;
   padding-top: 5%;
-
-  // margin-top: 5%;
-  position: absolute;
-  bottom: 0;
   width: 100%;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
-
   bottom: 5%;
-  border: 1px solid lightgray;
+  // border: 1px solid lightgray;
   padding-bottom: 5%;
   display: flex;
   justify-content: space-between;
-
 }
 
 .neon-tarif {
@@ -919,6 +941,7 @@ margin-bottom: 15px;
   font-family: Mukta-Regular, sans-serif;
   outline: none;
 }
+
 .large-input {
   background-color: #F4F4F4;
   color:  #000B31;
@@ -1240,7 +1263,7 @@ svg {
   }
 }
 
-label { font-size: 17px; }
+label { font-size: 17px; margin-bottom: 0 !important;}
 
 
 /*** custom checkboxes ***/
@@ -1257,3 +1280,35 @@ input[type=checkbox] + label:before { letter-spacing: 10px; } /* space between c
 
 input[type=checkbox]:checked + label:before { content: "\f046"; } /* checked icon */
 input[type=checkbox]:checked + label:before { letter-spacing: 5px; color: #F4CC20; } /* allow space for check mark */
+
+
+.creditCardsContainer {
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+}
+
+.creditCard {
+  height: 50px;
+    width: 50px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.neonDetailTitleCont {
+  display: flex;
+  justify-content: space-between;
+  width: 33%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+
+.commandeTitleCont {
+  display: flex;
+  justify-content: space-between;
+  width: 61%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
