--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -77,7 +77,7 @@
         </form>
       </div>
 
-      <button class="next-btn-no-margin signup-btn " (click)="sendResetEmail()" type="button">Réinitialisez le mot de passe</button>
+      <button class="next-btn-no-margin signup-btn " (click)="sendResetEmail()" type="button">Réinitialialisation</button>
       <button class="prev-btn login-btn" (click)="fromResetToSignin()" type="button">Retour</button>
 
     </div>
